fixes issues with collapsable states

--- a/cms/static/cms/sass/plugins/cms.placeholders.scss
+++ b/cms/static/cms/sass/plugins/cms.placeholders.scss
@@ -91,8 +91,8 @@
 
 	.cms_dragitem { cursor:move; }
 	.cms_dragitem-collapsable { cursor:pointer; padding-left:15px; }
-	.cms_dragitem-collapsable { background:url('/static/cms/img/toolbar/sprite_toolbar.png') no-repeat 3px -358px; }
-	.cms_dragitem-collapsed { background:url('/static/cms/img/toolbar/sprite_toolbar.png') no-repeat 2px -389px; }
+	.cms_dragitem-collapsable { background:url('/static/cms/img/toolbar/sprite_toolbar.png') no-repeat 2px -389px; }
+	.cms_dragitem-collapsed { background:url('/static/cms/img/toolbar/sprite_toolbar.png') no-repeat 3px -358px; }
 	.cms_dragitem-success { position:absolute; left:-1px; top:-1px; @include border-radius(3px);
 		width:100%; height:100%;
 		@include opacity(0.6); }
